--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "icon" href = 
+    "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Eo_circle_yellow_letter-n.svg/1200px-Eo_circle_yellow_letter-n.svg.png" 
+            type = "image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Nootrice</title>
 </head>
 <body>
     <header>
