--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <input type="checkbox" class="checkbox">
                 <span class="menu"> <span class="hamburger"></span> </span>
                 <ul class="menuUl">
-                  <li> <a href="#">  <img src="FAQ.png" id="ul1"></a> </li>
-                  <li> <a href="#"><img src="Оплата и доставка.png" alt=""></a> </li>
-                  <li> <a href="#"> <img src="Возврат.png" alt=""     ></a> </li>
-                  <li><a href="#"><img src="Исследования.png" alt=""></a></li>
-                  <li><a href="#"><img src="Личный кабинет.png" alt=""></a></li>
-                  <li><img src="8 8 (800) 600-09-90.png" alt=""></li>
+                  <li> <a href="#"> FAQ</a> </li>
+                  <li> <a href="#">Оплата и доставка</a> </li>
+                  <li> <a href="#"> Возврат</a> </li>
+                  <li><a href="#">Исследования</a></li>
+                  <li><a href="#">Личный кабинет</a></li>
+                  <li>8 8 (800) 600-09-90</li>
                 </ul>
             </label>
         </div>
