--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <header>
         <div>
             <label>
+                
                 <input type="checkbox" class="checkbox">
                 <span class="menu"> <span class="hamburger"></span> </span>
                 <ul class="menuUl">
-                  <li> <a href="#"> FAQ</a> </li>
-                  <li> <a href="#">Оплата и доставка</a> </li>
-                  <li> <a href="#"> Возврат</a> </li>
-                  <li><a href="#">Исследования</a></li>
-                  <li><a href="#">Личный кабинет</a></li>
-                  <li>8 8 (800) 600-09-90</li>
+                  <li class="menuLi"> <a href="#"> FAQ</a> </li>
+                  <li class="menuLi"> <a href="#">Оплата и доставка</a> </li>
+                  <li class="menuLi"> <a href="#"> Возврат</a> </li>
+                  <li class="menuLi"><a href="#">Исследования</a></li>
+                  <li class="menuLi"><a href="#">Личный кабинет</a></li>
+                  <li class="menuLi">8 8 (800) 600-09-90</li>
                 </ul>
             </label>
         </div>
